[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/tooluis/Scenes/Properties/NumericEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Viewers/3DEditor/ObjectProperties/ShapeProperties/CylinderProperties.gd" type="Script" id=2]

[node name="CylinderProperties" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 23.0
text = "Radius"

[node name="NumericEdit" parent="." instance=ExtResource( 1 )]
margin_top = 23.0
margin_right = 1024.0
margin_bottom = 56.0
caret_blink = true
caret_blink_speed = 0.5
value_type = 1

[node name="HSlider" type="HSlider" parent="."]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 72.0
min_value = 0.001
step = 0.1
value = 0.001

[node name="Label2" type="Label" parent="."]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 95.0
text = "Height"

[node name="NumericEdit2" parent="." instance=ExtResource( 1 )]
margin_top = 95.0
margin_right = 1024.0
margin_bottom = 128.0
value_type = 1

[connection signal="value_changed" from="NumericEdit" to="." method="_on_NumericEdit_value_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="NumericEdit2" to="." method="_on_NumericEdit2_value_changed"]
